# fast_api_tutorial

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_api_tutorial/: app.py  exceptions.py  security.py  settings.py
fast_api_tutorial/api/: __init__.py  dependencies.py
fast_api_tutorial/api/dependencies/: __init__.py  get_authorization.py  get_current_user.py  get_jwt_builder.py  get_password_hasher.py  get_unit_of_work.py
fast_api_tutorial/api/dto/: __init__.py  todo.py  user.py
fast_api_tutorial/api/routers/: __init__.py  auth_router.py  exercises.py  todo_router.py  user_router.py
fast_api_tutorial/core/: todo.py
fast_api_tutorial/persistence/: in_memory_unit_of_work.py  todo_repository.py  unit_of_work.py  user_repository.py
fast_api_tutorial/persistence/in_memory/: __init__.py  in_memory_unit_of_work.py  in_memory_user_repository.py
fast_api_tutorial/persistence/models/: __init__.py  pagination.py  todo.py  user.py
fast_api_tutorial/persistence/relational/: __init__.py  relational_todo_repository.py  relational_unit_of_work.py  relational_user_repository.py  todo_model.py  user_model.py
fast_api_tutorial/persistence/relational/migrations/: env.py
fast_api_tutorial/persistence/relational/migrations/versions/: 55810bb16ff8_create_todos_table.py  593168a4289f_create_updated_at_column_on_users_table.py  8b174bf083f0_create_users_table.py  c81c8c521270_create_todos_table.py
fast_api_tutorial/schemas/: __init__.py  todo.py  user.py
fast_api_tutorial/security/: __init__.py  authorization.py  jwt_builder.py  password_hasher.py  pwdlib_hasher.py
tests/: conftest.py  test_app.py  test_schemas.py  test_security.py
tests/fixtures/: authorization.py  client.py  jwt_builder.py  password_hasher.py  sql_session.py  todo_repository.py  todo_request.py  todo_response.py  unit_of_work.py  user_repository.py  user_request.py  user_response.py
tests/test_api/: test_auth_endpoints.py  test_exercises_endpoints.py  test_todo_endpoints.py  test_user_endpoints.py
tests/test_persistence/: test_relational_todo_repository.py  test_relational_unit_of_work.py  test_relational_user_repository.py
tests/test_security/: test_authorization.py  test_jwt_builder.py  test_password_hasher.py
