[tool.poetry]
name = "fast-api-tutorial"
version = "0.1.0"
description = ""
authors = ["Tomas Tamantini <tomasbft@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_tutorial"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = "fastapi dev fast_api_tutorial/app.py"
test = "pytest  --cov=fast_api_tutorial -vv"
coverage = "pytest --cov=fast_api_tutorial --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
